Align the labels left and give it more space on smaller screens on the profile page. Fixes #15

--- a/templates/css/base.css
+++ b/templates/css/base.css
@@ -28,14 +28,17 @@ body {
 	   -moz-box-sizing: border-box;
 	        box-sizing: border-box;
 }
+
 .form-signin .form-control:focus {
 	z-index: 2;
 }
+
 .form-signin input[type="text"] {
 	margin-bottom: -1px;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 }
+
 .form-signin input[type="password"] {
 	margin-bottom: 10px;
 	border-top-left-radius: 0;
@@ -43,6 +46,10 @@ body {
 }
 
 
+/* PROFILE */
+.form-profile .control-label {
+	text-align: left;
+}
 
 
 
